--- a/client/src/styles/components/_body.scss
+++ b/client/src/styles/components/_body.scss
@@ -8,7 +8,9 @@
 }
 .profilePix {
   background: url('../../pp.jpg');
-  opacity: 0.6;
+  border-radius: 70px;
+    // opacity: 0.9;
+  margin: 5px;
   height: 1100px;
   background-position: center;
   background-repeat: no-repeat;
