--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -7,6 +7,10 @@ body {
   background-color: $backgroud;
   padding: 0;
   margin: 0;
+  background: url('../../back.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 a {
