--- a/client/src/styles/components/_header.scss
+++ b/client/src/styles/components/_header.scss
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: space-between;
   padding: 10px;
-  background: rgb(2, 86, 92);
   margin: 0;
   border-radius: 30px 5px;
 }
@@ -16,6 +15,7 @@
 }
 .logo > p {
   text-align: center;
+  color: #ddebe6;
 }
 
 .nav-bar {
@@ -55,7 +55,6 @@
   }
   .logo > img {
     max-height: 50px;
-    // width: 40px;
   }
   .navigation {
     display: none; //none
@@ -72,13 +71,14 @@
   }
   #toggler {
     margin-left: 160px;
+    width: 10px;
   }
   .bar1,
   .bar2,
   .bar3 {
     width: 35px;
     height: 5px;
-    background-color: #333;
+    background-color: #ddebe6;
     margin: 6px 0;
     transition: 0.4s;
   }
