--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -30,11 +30,13 @@ a {
 
 .list-item {
   display: flex;
-  flex-direction: column;
+  color: azure;
+  font-size: 16px;
+  font-weight: bold;
 }
 
-.list-item a {
-  font-size: 18px;
+.list-item button {
+  margin-left: 4px;
 }
 
 .arrange {
