--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -32,6 +32,7 @@ a {
   display: flex;
   color: azure;
   margin: 5px;
+  justify-content: space-between;
   font-size: 16px;
   font-weight: bold;
 }
