--- a/client/src/styles/components/_resume.scss
+++ b/client/src/styles/components/_resume.scss
@@ -178,6 +178,12 @@ div.proj-details > div:last-child {
   justify-content: space-between;
   padding: 20px 10px 20px 0;
 }
+.contact-detail span {
+  margin-left: 20px;
+}
+.proj-detail:nth-child(2){
+  text-align: center;
+}
 
 .tech {
   margin-top: 30px;
@@ -230,6 +236,11 @@ div.proj-details > div:last-child {
   }
   .resume-details {
     flex: 1;
+  }
+  div.resume-details button {
+    top: 200px;
+    left: 150px;
+    position: absolute;
   }
   .proj-detail span {
     overflow: scroll;
