--- a/client/src/styles/components/_resume.scss
+++ b/client/src/styles/components/_resume.scss
@@ -76,9 +76,7 @@
   display: flex;
   flex-direction: column;
 }
-.resume-edu-date {
-  // width: 50px;
-}
+
 .resume-header-edu ul li {
   display: flex;
   list-style: none;
@@ -112,25 +110,43 @@ div.proj-details > div:last-child {
   margin-bottom: 4px;
 }
 
-.proj-detail {
+// .proj-detail {
+//   text-align: center;
+//   display: flex;
+//   justify-content: space-between;
+// }
+
+.proj-details table {
+  border-collapse: unset;
+  border-spacing: 0px;
+}
+.project-links p {
+  color: #055555;
+  margin: 3px;
+}
+.project-links {
+  margin-top: 3px;
+  color: #09bb77;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  overflow-wrap: break-word;
+  word-break: break-word;
 }
-.proj-detail span {
-  margin: 0;
-  margin-right: 5px;
+
+.proj-details table > tr td {
+  border-bottom: black 2px solid;
 }
-.proj-detail div {
-  padding: 2px;
-  border-right: 1px solid black;
-}
-.proj-detail-desc {
+.proj-details table > tr td:nth-child(2) {
+  border-right: black 2px solid;
+  text-align: center;
   display: flex;
   flex-direction: column;
 }
-.proj-detail-desc {
-  padding: 0;
-  margin: 0;
+.proj-details table > tr td:first-child {
+  border-right: black 2px solid;
+}
+.proj-details table > tr td:last-child {
+  margin-bottom: 4px;
   text-align: center;
 }
 
@@ -148,6 +164,9 @@ div.proj-details > div:last-child {
 .profile-header-details {
   margin-top: 3px;
   border-top: 3px solid black;
+}
+.profile-header-details p {
+  margin: 4px;
 }
 
 // second section
@@ -180,9 +199,6 @@ div.proj-details > div:last-child {
 }
 .contact-detail span {
   margin-left: 20px;
-}
-.proj-detail:nth-child(2){
-  text-align: center;
 }
 
 .tech {
