--- a/client/src/styles/components/_header.scss
+++ b/client/src/styles/components/_header.scss
@@ -11,7 +11,13 @@
   color: white;
   display: flex;
   flex-direction: column;
-  margin-left: 40px;
+  margin-right: 5px;
+  text-align: center;
+  margin-top: 20px;
+}
+.logo img {
+  height: 100px;
+  width: 100%;
 }
 .logo > p {
   text-align: center;
@@ -53,7 +59,11 @@
     display: flex;
     flex-direction: column;
   }
+  .logo {
+    margin-right: 0;
+  }
   .logo > img {
+    height: 70px;
     max-height: 50px;
   }
   .navigation {
