--- a/client/src/styles/draft.css
+++ b/client/src/styles/draft.css
@@ -1,63 +1,37 @@
-.RichEditor-root {
-  background: #fff;
-  border: 1px solid #ddd;
-  font-family: 'Georgia', serif;
-  font-size: 14px;
-  padding: 15px;
+pre {
+  background: #f1f1f1;
+  border-radius: 3px;
+  padding: 1px 10px;
+  color: #975c0e !important;
 }
 
-.RichEditor-editor {
-  border-top: 1px solid #ddd;
-  cursor: text;
-  font-size: 16px;
-  margin-top: 10px;
+.formEditor {
+  display: flex;
+  justify-content: center;
+  margin: 10px;
 }
-
-.RichEditor-editor .public-DraftEditorPlaceholder-root,
-.RichEditor-editor .public-DraftEditor-content {
-  margin: 0 -15px -15px;
-  padding: 15px;
+.Editor {
+  background: #035547;
 }
-
-.RichEditor-editor .public-DraftEditor-content {
-  min-height: 100px;
+.editorTag {
+  text-align: center;
+  color: white;
+  font-size: 40px;
+  display: flex;
+  flex-direction: column;
 }
-
-.RichEditor-hidePlaceholder .public-DraftEditorPlaceholder-root {
-  display: none;
+.rdw-editor-wrapper {
+  padding: 10px;
 }
-
-.RichEditor-editor .RichEditor-blockquote {
-  border-left: 5px solid #eee;
-  color: #666;
-  font-family: 'Hoefler Text', 'Georgia', serif;
-  font-style: italic;
-  margin: 16px 0;
-  padding: 10px 20px;
+.rdw-editor-main {
+  min-height: 200px;
+  padding: 8px;
 }
-
-.RichEditor-editor .public-DraftStyleDefault-pre {
-  background-color: rgba(0, 0, 0, 0.05);
-  font-family: 'Inconsolata', 'Menlo', 'Consolas', monospace;
-  font-size: 16px;
-  padding: 20px;
+.rdw-editor-toolbar {
+  margin-bottom: 0 !important;
+  border-bottom: 2px #035547 solid !important;
 }
-
-.RichEditor-controls {
-  font-family: 'Helvetica', sans-serif;
-  font-size: 14px;
-  margin-bottom: 5px;
-  user-select: none;
-}
-
-.RichEditor-styleButton {
-  color: #999;
-  cursor: pointer;
-  margin-right: 16px;
-  padding: 2px 0;
-  display: inline-block;
-}
-
-.RichEditor-activeButton {
-  color: #5890ff;
+.rdw-editor-main {
+  color: rgb(231, 224, 224);
+  background: rgb(1, 47, 65);
 }
