--- a/client/src/styles/components/_blog.scss
+++ b/client/src/styles/components/_blog.scss
@@ -2,7 +2,9 @@
   display: flex;
   flex-direction: column;
   border-radius: 50px;
-  background: #035157;
+
+  // background: #035157;
+  background: #888686;
 }
 
 .blog-header {
@@ -16,23 +18,38 @@
 .blog-header h1 {
   margin: 0 auto;
   padding: 25px;
-  color: #33c207;
+  // color: #33c207;
+  color: #7ad9f5;
 }
 
 .blog-news {
   padding: 50px;
+  padding-top: unset;
 }
 .blog-new {
   margin: 20px;
   margin-top: 40px;
   border-radius: 20px;
-  //   border: 2px #241901 solid;
+  background: #01251f;
+  height: auto;
+  max-height: 300px;
+  overflow: hidden;
+  text-align: center;
+}
+.blog-new img {
+  height: 100px;
+  width: 60%;
+  margin: 10px;
+}
+.headline {
+  font-size: 30px !important;
 }
 .blog-new p {
-  font-size: 30px;
+  font-size: 20px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif;
   color: white;
+  margin: 0;
 }
 .blog-form {
   text-align: center;
