added contact submit

--- a/client/src/styles/components/_blog.scss
+++ b/client/src/styles/components/_blog.scss
@@ -26,6 +26,10 @@
   padding: 50px;
   padding-top: unset;
 }
+.blog a {
+  text-align: center;
+  font-size: 20px;
+}
 .blog-new {
   margin: 20px;
   margin-top: 40px;
