edited background image

--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 html {
-  background: url('../../back.jpg');
+  background-image: url('../../back.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
