--- a/client/src/styles/components/_resume.scss
+++ b/client/src/styles/components/_resume.scss
@@ -256,7 +256,7 @@ div.proj-details > div:last-child {
   }
   div.resume-details button {
     left: 150px;
-    bottom: 1660px;
+    // bottom: 1660px;
     // bottom: 1020px;
     position: absolute;
   }
@@ -265,14 +265,14 @@ div.proj-details > div:last-child {
   }
 }
 
-@media screen and (device-aspect-ratio: 40/71) {
-  div.resume-details button {
-    left: 150px;
-    bottom: 1760px;
-    position: absolute;
-  }
-  .resume-details {
-    flex: 1;
-    position: relative;
-  }
-}
+// @media screen and (device-aspect-ratio: 40/71) {
+//   div.resume-details button {
+//     left: 150px;
+//     bottom: 1760px;
+//     position: absolute;
+//   }
+//   .resume-details {
+//     flex: 1;
+//     position: relative;
+//   }
+// }
