added style to resume

--- a/client/src/styles/components/_resume.scss
+++ b/client/src/styles/components/_resume.scss
@@ -133,16 +133,19 @@ div.proj-details > div:last-child {
   overflow-wrap: break-word;
   word-break: break-word;
 }
-.space{
-  display:flex; margin-right:20px;
+.space {
+  display: flex;
+  margin-right: 20px;
 }
 .resume span a {
   word-break: break-all;
 }
 
 .proj-details table tr td {
-  border-bottom: black 2px solid;
-  padding-bottom:30px;
+  // border-bottom: black 2px solid;
+}
+td {
+  padding-bottom: 30px;
 }
 .proj-details table > tr td:nth-child(2) {
   border-right: black 2px solid;
